# finax

./: .gitattributes  .gitignore  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  ROADMAP.md  pyproject.toml
finax/: __init__.py  _base_stepper.py  _spectral.py  greeks.py
finax/analytical/: __init__.py  _black_scholes.py
finax/calibration/: __init__.py  _iv_calibration.py
finax/etdrk/: __init__.py  _etdrk_1.py  _etdrk_2.py  _etdrk_3.py  _etdrk_4.py
finax/stepper/: __init__.py  _black_scholes.py
finonax/: __init__.py  _base_stepper.py  greeks.py
finonax/analytical/: __init__.py  _merton.py
finonax/calibration/: __init__.py  _iv_calibration.py  _merton_calibration.py
finonax/etdrk/: _etdrk_1.py  _etdrk_2.py  _etdrk_3.py  _etdrk_4.py
finonax/nonlin_fun/: __init__.py
finonax/stepper/: __init__.py  _black_scholes.py  _merton.py
tests/: test_analytical.py  test_base_stepper.py  test_black_scholes_convergence.py  test_black_scholes_stepper.py  test_calibration.py  test_etdrk.py  test_greeks.py  test_greeks_convergence.py  test_merton_analytical.py  test_merton_calibration.py  test_merton_greeks.py  test_merton_stepper.py  test_spectral.py
validation/: README.md  calibration_demo.py  calibration_demo_data.csv  convergence.py  convergence_data.csv  greeks_grid.py  greeks_grid_data.csv  merton_calibration_demo.py  merton_calibration_demo_data.csv  merton_convergence.py  merton_convergence_data.csv  strike_grid.py  strike_grid_data.csv
