[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finax"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["jax[cpu]>=0.4", "equinox>=0.11", "jaxtyping>=0.2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["finax*"]
